# tonic-issue-minimal-example

./: Cargo.toml  LICENSE
src/: main.rs
