[package]
name = "tonic-issue-minimal-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
